--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Strider Core",
   "main": "index.js",
   "scripts": {
-    "test": "standard && node test | tap-spec"
+    "test": "standard && node test | tap-spec",
+    "docs": "apidoc -i lib/ -o docs/"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/Strider-CD/core#readme",
   "devDependencies": {
+    "apidoc": "^0.13.1",
     "standard": "^4.5.3",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
