--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "standard": "^4.5.3",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
+  },
+  "dependencies": {
+    "config": "^1.14.0",
+    "hapi": "^8.8.0",
+    "joi": "^6.5.0",
+    "json5": "^0.2.0"
   }
 }
