--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "standard && node test | tap-spec",
+    "test": "snazzy && node test | tap-spec",
     "docs": "apidoc -i lib/ -o docs/"
   },
   "repository": {
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/Strider-CD/core#readme",
   "devDependencies": {
     "apidoc": "^0.13.1",
-    "standard": "^4.5.3",
+    "snazzy": "^1.0.1",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
