--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "snazzy && node test | tap-spec",
+    "test": "snazzy; node test | tap-spec",
     "docs": "apidoc -i lib/ -o docs/"
   },
   "repository": {
@@ -28,12 +28,15 @@
     "tape": "^4.0.0"
   },
   "dependencies": {
-    "config": "^1.14.0",
     "bluebird": "^2.4.2",
+    "config": "^1.14.0",
     "hapi": "^8.8.0",
     "joi": "^6.5.0",
     "json5": "^0.2.0",
     "primus": "^3.1.1",
+    "seneca": "^0.6.3",
+    "string": "^3.3.0",
+    "winston": "^1.0.1",
     "ws": "^0.7.2"
   }
 }
