--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,10 @@ node_js:
     - "0.12"
     - "0.11"
     - "0.10"
+
+sudo: false
+
+script:
+  - "npm run test-coverage"
+after_script:
+  - "npm install coveralls@2 && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
