--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Strider Core",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/traceur-runner/bin/traceur-runner.js index.js server",
-    "test": "snazzy; ./node_modules/traceur-runner/bin/traceur-runner.js ./node_modules/tape/bin/tape test/*.js | tap-spec",
+    "start": "node index.js",
+    "test": "snazzy; tape test/*.js | tap-spec",
+    "test-coverage": "istanbul cover test/*.js --report lcovonly | tap-spec",
     "docs": "apidoc -i lib/ -o docs/"
   },
   "repository": {
@@ -23,12 +24,14 @@
   "homepage": "https://github.com/Strider-CD/core#readme",
   "devDependencies": {
     "apidoc": "^0.13.1",
+    "babel": "^5.8.21",
+    "babel-eslint": "^4.0.10",
+    "istanbul": "^0.3.18",
     "snazzy": "^1.0.1",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
   "dependencies": {
-    "babel-eslint": "^4.0.10",
     "bluebird": "^2.4.2",
     "config": "^1.14.0",
     "eventemitter3": "^1.1.1",
@@ -41,16 +44,12 @@
     "node-uuid": "^1.4.3",
     "primus": "^3.1.1",
     "rwlock": "^5.0.0",
-    "seneca": "^0.6.3",
-    "standard": "^5.1.0",
     "string": "^3.3.0",
-    "traceur": "0.0.91",
-    "traceur-runner": "^2.0.1",
     "tv4": "^1.2.3",
     "winston": "^1.0.1",
     "ws": "^0.7.2"
   },
   "standard": {
-          "parser": "babel-eslint"
+    "parser": "babel-eslint"
   }
 }
