--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "apidoc": "^0.13.1",
     "babel": "^5.8.21",
     "babel-eslint": "^4.0.10",
+    "eslint": "^1.2.1",
+    "eslint-config-standard": "^4.1.0",
+    "eslint-plugin-standard": "^1.3.0",
     "istanbul": "^0.3.18",
     "snazzy": "^1.0.1",
     "tap-spec": "^4.0.2",
