--- a/config/custom-environment-variables.json5
+++ b/config/custom-environment-variables.json5
@@ -4,6 +4,9 @@
   jwtSecret: 'STRIDER_JWT_SECRET',
   adminUser: 'STRIDER_ADMIN_USER',
   adminPwd: 'STRIDER_ADMIN_PWD',
+  mongoDbURI: 'STRIDER_MONGODB_URI',
+  dbType: 'STRIDER_DB_TYPE',
+  clearDB: 'STRIDER_CLEAR_DB',
 
   github: {
     apiServer: 'STRIDER_GITHUB_API_SERVER',
