--- a/package.json
+++ b/package.json
@@ -40,18 +40,23 @@
     "bcrypt": "^0.8.5",
     "bluebird": "^2.4.2",
     "config": "^1.14.0",
+    "deasync": "^0.1.2",
     "eventemitter3": "^1.1.1",
+    "flat": "^1.6.0",
     "github": "^0.2.4",
     "hapi": "^8.8.0",
     "hapi-auth-basic": "^3.0.0",
     "hapi-auth-jwt2": "^5.0.7",
     "hapi-decorators": "^0.4.0",
     "joi": "^6.5.0",
+    "joigoose": "^1.5.5",
     "json5": "^0.2.0",
     "jsonwebtoken": "^5.0.5",
     "jwt-simple": "^0.3.1",
     "lodash": "^3.10.1",
     "lokijs": "^1.3.8",
+    "mongoose": "^4.1.8",
+    "mongotape": "^1.0.0",
     "node-uuid": "^1.4.3",
     "primus": "^3.1.1",
     "primus-rooms": "^3.3.0",
