allow for default projects to be created (for easier debugging)

--- a/config/custom-environment-variables.json5
+++ b/config/custom-environment-variables.json5
@@ -7,6 +7,8 @@
   mongoDbURI: 'STRIDER_MONGODB_URI',
   dbType: 'STRIDER_DB_TYPE',
   clearDB: 'STRIDER_CLEAR_DB',
+  defaultProjectName: 'STRIDER_DEFAULT_PROJECT_NAME',
+  defaultProjectId: 'STRIDER_DEFAULT_PROJECT_ID',
 
   github: {
     apiServer: 'STRIDER_GITHUB_API_SERVER',
