--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^1.2.1",
     "eslint-config-standard": "^4.1.0",
     "eslint-plugin-standard": "^1.3.0",
+    "grunt": "^0.4.5",
     "istanbul": "^0.3.18",
     "snazzy": "^1.0.1",
     "tap-spec": "^4.0.2",
