--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "apidoc": "^0.13.1",
     "babel": "^5.8.21",
     "babel-eslint": "^4.0.10",
-    "babel-istanbul": "^0.6.0",
+    "babel-istanbul": "0.4.0",
     "eslint": "^1.2.1",
     "eslint-config-standard": "^4.1.0",
     "eslint-plugin-standard": "^1.3.0",
