--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-    - "0.12"
-    - "0.11"
-    - "0.10"
+  - "latest"
+  - "4.x"
+  - "0.12"
+  - "0.10"
 
 sudo: false
 
