--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "lint": "snazzy",
+    "lint": "snazzy index.js lib/**/*.js",
     "test": "tape test/*.js | tap-spec",
     "posttest": "npm run lint",
     "test-coverage": "babel-istanbul cover test/*.js --report lcovonly | tap-spec",
@@ -25,48 +25,49 @@
   },
   "homepage": "https://github.com/Strider-CD/core#readme",
   "devDependencies": {
-    "apidoc": "^0.13.1",
-    "babel": "^5.8.21",
+    "apidoc": "^0.15.0",
+    "babel": "^5.8.34",
     "babel-eslint": "^4.0.10",
     "babel-istanbul": "0.4.0",
-    "eslint": "^1.2.1",
-    "eslint-config-standard": "^4.1.0",
+    "eslint": "^2.0.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.0",
     "grunt": "^0.4.5",
-    "snazzy": "^1.0.1",
+    "snazzy": "^2.0.1",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
   "dependencies": {
     "bcryptjs": "^2.3.0",
-    "bluebird": "^2.4.2",
+    "bluebird": "^3.3.1",
     "config": "^1.14.0",
     "deasync": "^0.1.2",
     "eventemitter3": "^1.1.1",
-    "flat": "^1.6.0",
+    "flat": "^2.0.0",
     "github": "^0.2.4",
-    "hapi": "^8.8.0",
-    "hapi-auth-basic": "^3.0.0",
+    "hapi": "^13.0.0",
+    "hapi-auth-basic": "^4.1.0",
     "hapi-auth-jwt2": "^5.0.7",
     "hapi-decorators": "^0.4.0",
-    "joi": "^6.5.0",
+    "joi": "^8.0.0",
     "joigoose": "^1.5.5",
-    "json5": "^0.2.0",
+    "json5": "^0.4.0",
     "jsonwebtoken": "^5.0.5",
-    "jwt-simple": "^0.3.1",
-    "lodash": "^3.10.1",
+    "jwt-simple": "^0.4.1",
+    "lodash": "^4.3.0",
     "lokijs": "^1.3.8",
     "mongoose": "^4.1.8",
     "mongotape": "^1.0.0",
     "node-uuid": "^1.4.3",
-    "primus": "^3.1.1",
+    "primus": "^4.0.5",
     "primus-rooms": "^3.3.0",
     "redtape": "^1.0.0",
     "rwlock": "^5.0.0",
     "string": "^3.3.0",
     "validator": "^4.0.5",
-    "winston": "^1.0.1",
-    "ws": "^0.7.2"
+    "winston": "^2.1.1",
+    "ws": "^1.0.1"
   },
   "standard": {
     "parser": "babel-eslint"
