--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel": "^5.8.34",
     "babel-eslint": "^4.0.10",
     "babel-istanbul": "0.4.0",
-    "eslint": "^2.0.0",
+    "eslint": "^2.0.0-rc.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.0",
