Add CC coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ sudo: false
 script:
   - "npm run test-coverage"
 after_script:
-  - "npm install coveralls@2 && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+  - "npm run send-coverage"
