--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "optional": ["es7.decorators", "es7.objectRestSpread"]
+  "plugins": ["transform-decorators-legacy", "transform-es2015-modules-commonjs"]
 }
