--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "@strider/core",
   "version": "1.0.0",
   "description": "Strider Core",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "lint": "snazzy index.js lib/**/*.js",
     "pretest": "npm run lint",
     "test": "tape test/*.js | tap-spec",
     "test-coverage": "babel-istanbul cover test/*.js --report lcovonly | tap-spec",
     "send-coverage": "codeclimate-test-reporter < coverage/lcov.info",
     "posttest-coverage": "npm run lint",
+    "build": "babel -s -d dist lib",
+    "watch": "babel -sw -d dist lib",
     "docs": "apidoc -i lib/ -o docs/"
   },
   "repository": {
@@ -31,13 +33,16 @@
   },
   "homepage": "https://github.com/Strider-CD/core#readme",
   "engines": {
-    "node": ">=4.2.3"
+    "node": ">=6"
   },
   "devDependencies": {
     "apidoc": "^0.15.0",
-    "babel": "^5.8.34",
+    "babel-cli": "^6.11.4",
     "babel-eslint": "^4.0.10",
     "babel-istanbul": "0.4.0",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "codeclimate-test-reporter": "^0.3.1",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
@@ -48,6 +53,7 @@
     "tape": "^4.0.0"
   },
   "dependencies": {
+    "babel-register": "^6.11.6",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.3.1",
     "config": "^1.14.0",
