--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node dist/index.js",
     "lint": "snazzy index.js lib/**/*.js",
     "pretest": "npm run lint",
-    "test": "tape test/*.js | tap-spec",
-    "test-coverage": "babel-istanbul cover test/*.js --report lcovonly | tap-spec",
+    "test": "tape test/ | tap-spec",
+    "test-coverage": "babel-istanbul cover test/ --report lcovonly | tap-spec",
     "send-coverage": "codeclimate-test-reporter < coverage/lcov.info",
     "posttest-coverage": "npm run lint",
     "build": "babel -s -d dist lib",
