Add async/await support

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "plugins": ["transform-decorators-legacy", "transform-es2015-modules-commonjs"]
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-es2015-modules-commonjs",
+    "transform-async-to-generator"
+  ]
 }
