--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "babel-cli": "^6.11.4",
     "babel-eslint": "^4.0.10",
     "babel-istanbul": "0.4.0",
-    "babel-register": "^6.11.6",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-register": "^6.11.6",
     "codeclimate-test-reporter": "^0.3.1",
+    "eslint": "^2.13.1",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.0",
@@ -65,6 +67,7 @@
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "hapi": "^13.0.0",
+    "hapi-async-handler": "^1.0.3",
     "hapi-auth-basic": "^4.1.0",
     "hapi-auth-jwt2": "^5.0.7",
     "hapi-decorators": "^0.4.0",
