--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,13 @@
 {
   "extends": "standard",
+  "parser": "babel-eslint",
 
   "env": {
     "es6": true,
     "node": true
+  },
+
+  "rules": {
+    "eol-last": false
   }
 }
