--- a/package.json
+++ b/package.json
@@ -37,58 +37,61 @@
     "node": ">=6"
   },
   "devDependencies": {
-    "apidoc": "^0.15.0",
+    "apidoc": "^0.17.5",
     "babel-cli": "^6.11.4",
-    "babel-eslint": "^4.0.10",
-    "babel-istanbul": "0.4.0",
+    "babel-eslint": "^7.1.1",
+    "babel-istanbul": "^0.12.1",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-register": "^6.11.6",
-    "codeclimate-test-reporter": "^0.3.1",
-    "eslint": "^2.13.1",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.0",
-    "grunt": "^0.4.5",
-    "snazzy": "^3.0.0",
+    "co": "^4.6.0",
+    "codeclimate-test-reporter": "^0.4.1",
+    "eslint": "^3.16.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-standard": "^2.0.1",
+    "grunt": "^1.0.1",
+    "snazzy": "^6.0.0",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
   "dependencies": {
+    "@glimmer/di": "^0.1.8",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.3.1",
     "config": "^1.14.0",
     "deasync": "^0.1.2",
-    "eventemitter3": "^1.1.1",
+    "eventemitter3": "^2.0.2",
     "flat": "^2.0.0",
-    "github": "^0.2.4",
-    "good": "^6.6.0",
-    "good-console": "^5.3.1",
-    "hapi": "^13.0.0",
+    "github": "^9.0.0",
+    "good": "^7.1.0",
+    "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.1",
+    "hapi": "^16.1.0",
     "hapi-async-handler": "^1.0.3",
     "hapi-auth-basic": "^4.1.0",
-    "hapi-auth-jwt2": "^5.0.7",
+    "hapi-auth-jwt2": "^7.2.4",
     "hapi-decorators": "^0.4.0",
-    "joi": "^8.0.0",
+    "joi": "^10.2.2",
     "joigoose": "^1.5.5",
-    "json5": "^0.4.0",
-    "jsonwebtoken": "^5.0.5",
-    "jwt-simple": "^0.4.1",
+    "json5": "^0.5.1",
+    "jsonwebtoken": "^7.3.0",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.3.0",
     "lokijs": "^1.3.8",
     "mongoose": "^4.1.8",
     "mongotape": "^1.0.0",
     "node-uuid": "^1.4.3",
-    "primus": "^4.0.5",
+    "primus": "^6.0.9",
     "primus-rooms": "^3.3.0",
     "redtape": "^1.0.0",
     "rwlock": "^5.0.0",
     "string": "^3.3.0",
-    "validator": "^4.0.5",
+    "validator": "^6.2.1",
     "winston": "^2.1.1",
-    "ws": "^1.0.1"
+    "ws": "^2.1.0"
   },
   "standard": {
     "parser": "babel-eslint"
