--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "transform-decorators-legacy",
     "transform-es2015-modules-commonjs",
-    "transform-async-to-generator"
+    "transform-async-to-generator",
+    "transform-class-properties"
   ]
 }
