--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-eslint": "^7.1.1",
     "babel-istanbul": "^0.12.1",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
