--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "transform-decorators-legacy",
     "transform-es2015-modules-commonjs",
     "transform-async-to-generator",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-runtime"
   ]
 }
