--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "apidoc": "^0.17.5",
     "babel-cli": "^6.11.4",
     "babel-eslint": "^7.1.1",
+    "babel-helpers": "^6.23.0",
     "babel-istanbul": "^0.12.1",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.11.6",
     "codeclimate-test-reporter": "^0.3.1",
     "eslint": "^2.13.1",
@@ -58,6 +60,7 @@
   },
   "dependencies": {
     "@glimmer/di": "^0.1.8",
+    "babel-runtime": "^6.23.0",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.3.1",
     "config": "^1.14.0",
